<resources>
    
	<!-- Release 1 -->
    <string name="app_name">ANDSemu</string>
    <string name="title_activity_main">ANDSemu</string>
	<string name="rom_error">There was an error loading this ROM :(</string>
	<string name="OK">OK</string>
	<string name="location">Location</string>
    <string name="cant_read_folder">Folder can\'t be read!</string>
    <string name="cancel">Cancel</string>
    <string name="no_data">No Data</string>
    <string name="Load">Load ROM</string>
    <string name="QuickSave">Quick Save</string>
    <string name="QuickRestore">Quick Restore</string>
    <string name="SaveState">Save State</string>
    <string name="RestoreState">Restore State</string>
    <string name="Settings">Settings</string>
    
    <!-- Release 2 -->
    <string name="touchnotify">To toggle between touch mode and keypad mode, tap the "touch" button at the top</string>
    <string name="frameskip">Frame skip</string>
    <string name="frameskipdesc">How many frames to skip when emulating. Helps make slow emulation match real time.</string>
    <string name="vsync">VSync</string>
    <string name="vsyncdesc">Only draw to the screen in-between frames. Can slow down emulation but turning off may cause graphical glitches.</string>
    <string name="fps">Show FPS</string>
    <string name="fpsdesc">Draw FPS onto screen.</string>
    
    <!-- Release 3 -->
    <string name="loading">Loading</string>    
    
    <!-- Release 4 -->
    <string name="filter">Screen filter</string>
    <string name="filterdesc">Filter to use when upscaling from Nintendo DS resolution to your screen. Higher quality filters may degrade performance.</string>
    
    <!-- Release 5 -->
    <string name="threedrenderer">3D Renderer</string>
    <string name="threedrendererdesc">Which 3D rendering engine to use.</string>
    <string-array name ="threed_options">
        <item>None</item>
        <item>OpenGL</item>
        <item>Software</item>
    </string-array>
    <string name="sound">Enable sound</string>
    <string name="sounddesc">Enable processing and playback of audio. Disabling can increase performance.</string>
    <string name="soundmsg">Would you like to enable sound? This can cause a 3 to 5 FPS performance loss.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!-- Release 8 -->
    <string name="Display">Display</string>
    <string name="Controls">Controls</string>
    <string name="EditLayout">Edit controls layout</string>
    <string name="EditLayoutDesc">Edit where the touch controls are placed on the screen.</string>
    <string name="UseTouchPort">Portrait touch buttons</string>
    <string name="UseTouchPortDesc">Use touch buttons on the screen in portrait mode.</string>
    <string name="UseTouchLand">Landscape touch buttons</string>
    <string name="UseTouchLandDesc">Use touch buttons on the screen in landscape mode.</string>
    <string name="ResetLayout">Reset controls layout</string>
    <string name="ResetLayoutDesc">Reset the layout of touch controls to their defaults.</string>
    <string name="Sound">Sound</string>
    <string name="LCDSwap">Swap LCDs</string>
    <string name="LCDSwapDesc">Check to swap the location of the main and touch LCDs.</string>
    <string name="ButtonTrans">Button transparency</string>
    <string name="ButtonTransDesc">How transparent the on-screen touch buttons should be</string>
    <string name="Haptic">Haptic feedback</string>
    <string name="HapticDesc">Provide haptic feedback on button press if supported by device.</string>
    <string name="KeymapDialogDesc">Press a key to to map to this button</string>
    <string name="KeymapValuePreface">Currently mapped to</string>
    <string name="EditKeymap">Edit key mappings</string>
    <string name="EditKeymapDesc">Edit mappings from hardware keys to DS buttons.</string>
    <string name="Up">Up</string>
    <string name="Down">Down</string>
    <string name="Left">Left</string>
    <string name="Right">Right</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Select">Start</string>
    <string name="Start">Select</string>
    <string name="L">L</string>
    <string name="R">R</string>
    <string name="Touch">Touch</string>
    
    <!-- Release 10 -->
    <string name="DontRotateLCDs">Don\'t rotate LCDs</string>
    <string name="DontRotateLCDsDesc">In landscape mode, don\'t rotate the game LCDs. Use this for games that were intended to played with the DS held sideways.</string>
    <string name="Language">Language</string>
    <string name="LanguageDesc">The language of the system. Multilingual ROMs use this setting. Changes will be applied on the next ROM load.</string>
    <string name="Gameplay">Gameplay</string>
    
    <!-- Release 11 -->
    <string name="AddCheat">Add a new Action Replay cheat</string>
    <string name="Cheats">Cheats</string>
    <string name="Exit">Exit</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Description">Description</string>
    
    <!-- Release 12 -->
    <string name="EnableMicrophone">Enable microphone</string>
    <string name="EnableMicrophoneDesc">Use your device\'s microphone as the DS microphone.</string>
    <string name="AlwaysTouch">Always allow touch</string>
    <string name="AlwaysTouchDesc">Always process the DS touchscreen, even when not in touch mode. For games that require using controls and touchscreen at the same time.</string>
    
    <!-- Release m14 -->
    <string name="CheatCode">Code</string>
    <string name="CurrentValue">Current value</string>
    <string name="ImageOfFolder">Image of file</string>
    <string name="about">ANDSemu is a fork of nds4droid. nds4droid in turn is a port of DeSmuME to android by Jeffrey Quesnelle.\n\n
        ANDSemu is done by a group of university friends collectivly known as team miraie.\n\n
        Credits:\n
        Jeffrey Quesnelle (emozilla), for nds4droid\nTeam DeSmuME, for DeSmuME\n
        Sykonist, for the icon of the white nds (only used in development)\n
        Evan-Amos, for his contrabutions to wikipedia and our current blue fat nds icon\n
        Alexander Ponomarev, for android-file-dialog\nLachlan Tychsen - Smith, for math-neon\n
        Maxim Shemanarev, for Anti-Grain Geometry (AGG)\
        np7zip &amp; 7zip, for powerful archiving</string>
	<string name="thankyou">Thank you!</string>
	
	<!-- Release m16 -->
	<string name="CallToPlay">Play Now!</string>
	<string name="ResumeGame">Resume Game</string>
    <string name="CallToLoadAutosave">Play last Autosave</string>
    <string name="QuickSettings">Quick Settings</string>
    <string name="AllSettings">All Settings</string>
    <string name="Autosaves">Autosaves</string>
    <string name="NoAutosaves">No autosaves yet</string>
    <string name="About">About</string>
    
    <!-- Release m17 -->
    <string name="Pause">Pause</string>
    <string name="Resume">Resume</string>
    <string name="NdsLikeLandscape">NDS like landscape</string>
    <string name="NdsLikeLandscapeDesc">In landscape orientation stack the top screen above the bottom screen.
        The controls will be alongside the screens.</string>
    
    
    
    <!-- Do not translate -->
    <string-array name="filternames">
        <item>Normal</item>
		<item>HQ2x</item>
		<item>2XSaI</item>
		<item>Super2XSaI</item>
		<item>SuperEagle</item>
		<item>Scanline</item>
		<item>Bilinear</item>
		<item>Nearest 2X</item>
		<item>HQ2xS</item>
		<item>LQ2x</item>
		<item>LQ2xS</item>
        <item>EPX</item>
        <item>Nearest+ 1.5X</item>
        <item>Nearest 1.5X</item>
        <item>EPX+</item>
        <item>EPX 1.5X</item>
        <item>EPX+ 1.5X</item>
        <item>HQ4x</item>
    </string-array>
        <string-array name="zerothroughnine">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="zerothroughseventeen">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
    </string-array>
   	<string-array name="zerothroughtwo">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="languages">
        <item>日本語</item>
        <item>English</item>
        <item>Français</item>
        <item>Deutsch</item>
        <item>Italiano</item>
        <item>Español</item>
    </string-array>
    <string-array name="zerothroughfive">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    
</resources>