<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollWrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="35dip"  >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CallToPlay"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="10dip"
        android:textColor="@android:color/black" />
    
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="2dip"
	    android:background="@android:color/darker_gray"
        android:layout_marginBottom="10dip" />
        
    <Button
        android:id="@+id/resumeGame"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ResumeGame" 
        android:onClick="resumeGame"/>
        
    <Button
        android:id="@+id/loadAutosave"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/CallToLoadAutosave" 
        android:onClick="loadAutosave"/>
        
    <Button
        android:id="@+id/loadNewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="5dip"
        android:text="@string/Load" 
        android:onClick="pickRom"/>

    
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/QuickSettings"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="20dip"
        android:textColor="@android:color/black" />
    
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="2dip"
	    android:background="@android:color/darker_gray"
        android:layout_marginBottom="10dip" />

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    android:text="@string/Sound"
        	android:layout_alignParentLeft="true"
        	android:layout_centerVertical="true"
	        android:layout_marginTop="20dip" />
		<CheckBox
		    android:id="@+id/soundToggle"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
        	android:layout_alignParentRight="true"
	        android:onClick="setSound" />
	</RelativeLayout>

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
        	android:layout_alignParentLeft="true"
        	android:layout_centerVertical="true"
	        android:layout_marginTop="20dip"
	    	android:text="@string/vsync" />
		<CheckBox
		    android:id="@+id/vsyncToggle"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
        	android:layout_alignParentRight="true"
        	android:onClick="setVsync" />
	</RelativeLayout>

    <Button
        android:id="@+id/button2"
        android:text="@string/AllSettings" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:drawableLeft="@drawable/action_settings_dark"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:onClick="gotoSettings" />
    
    
    
<LinearLayout
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Autosaves"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="20dip"
        android:textColor="@android:color/black" />
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="2dip"
	    android:background="@android:color/darker_gray"
        android:layout_marginBottom="10dip"  />

	<TextView
	    android:id="@+id/noAutosavesNotice"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/NoAutosaves"
	    android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ExpandableListView
                android:id="@+id/expandableListView1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </ExpandableListView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

</LinearLayout>
</ScrollView>